<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/signUp_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:layout_marginTop="320dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/signUp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/sign_up"
        tools:targetApi="lollipop" />

</LinearLayout>